Add /services GET endpoint
