# go-server/go/model_service.go
@@ -7,12 +7,17 @@
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
+import (
+	"time"
+)
 
-type RoomCreateRequest struct {
+type Service struct {
 
-	MaxCount int32 `json:"max_count,omitempty"`
+	Id int32 `json:"id,omitempty"`
 
-	ServiceId int32 `json:"service_id,omitempty"`
+	Name string `json:"name,omitempty"`
 
-	PlanName string `json:"plan_name,omitempty"`
+	CreatedAt time.Time `json:"created_at,omitempty"`
+
+	UpdatedAt time.Time `json:"updated_at,omitempty"`
 }
